<resources>
    <string name="app_name">Thirty</string>
    <string name="die_face_1">Die face 1</string>
    <string name="roll">Roll</string>
    <string name="start_game">Start Game</string>
    <string name="round_text">%1$d/10</string>
    <string name="roll_text">%1$d/3</string>
    <string name="score">Score</string>
    <string name="next">Next</string>
    <string name="round">Round</string>
    <string name="finish_text">Finish</string>
    <string name="next_text">Next</string>
    <string name="results">Results</string>
    <string name="main_menu">Main Menu</string>
    <string name="roundResult">Round</string>
    <string name="choice">Choice</string>
    <string name="scoreResult">Score</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="total">Total</string>
    <string-array name="score_options">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>