<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameFragment">

    <GridLayout
        android:id="@+id/diceGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/die1Image"
            style="@style/DieImageStyle"
            android:contentDescription="@string/die_face_1"
            android:src="@drawable/die_1" />

        <ImageView
            android:id="@+id/die2Image"
            style="@style/DieImageStyle"
            android:contentDescription="@string/die_face_1"
            android:src="@drawable/die_2" />

        <ImageView
            android:id="@+id/die3Image"
            style="@style/DieImageStyle"
            android:contentDescription="@string/die_face_1"
            android:src="@drawable/die_3" />

        <ImageView
            android:id="@+id/die4Image"
            style="@style/DieImageStyle"
            android:contentDescription="@string/die_face_1"
            android:src="@drawable/die_4" />

        <ImageView
            android:id="@+id/die5Image"
            style="@style/DieImageStyle"
            android:contentDescription="@string/die_face_1"
            android:src="@drawable/die_5" />

        <ImageView
            android:id="@+id/die6Image"
            style="@style/DieImageStyle"
            android:contentDescription="@string/die_face_1"
            android:src="@drawable/die_6" />

    </GridLayout>
    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackground"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/RoundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/RoundNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="1/10"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/RollText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RollNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0/3"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/ScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ScoreNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="0"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/scoreSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/score_options"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diceGrid"
        app:layout_constraintWidth_percent="0.5" />

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <Button
            android:id="@+id/submitScoreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/roll" />

        <Button
            android:id="@+id/NextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>